<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".home">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/fintrack11"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:fitsSystemWindows="true">


            <TextView
                android:id="@+id/finetrackTV2"
                android:layout_width="251dp"
                android:layout_height="88dp"
                android:fontFamily="@font/agbalumo"
                android:text="@string/finetrackTV"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="60sp"
                android:translationX="80dp"
                android:translationY="50dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="750dp"
                android:translationY="85dp"
                app:srcCompat="@drawable/rectangle2" />


            <ImageView
                android:id="@+id/btnmenu"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:translationX="10dp"
                android:translationY="-800dp"
                app:srcCompat="@drawable/menu2" />


            <TextView
                android:id="@+id/tvName"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:fontFamily="@font/anta"
                android:text="@string/tvname"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:translationX="190dp"
                android:translationY="-690dp" />


            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="@font/agbalumo"
                android:text="@string/tvwelcome"
                android:textColor="@color/green2"
                android:textSize="24sp"
                android:translationX="20dp"
                android:translationY="-740dp" />


            <ImageView
                android:id="@+id/availabale"
                android:layout_width="350dp"
                android:layout_height="140dp"
                android:translationX="30dp"
                android:translationY="-720dp"
                app:srcCompat="@drawable/rectangle_income" />


            <ImageView
                android:id="@+id/availabale2"
                android:layout_width="350dp"
                android:layout_height="140dp"
                android:translationX="30dp"
                android:translationY="-690dp"
                app:srcCompat="@drawable/rectangle_income" />


            <ImageView
                android:id="@+id/availabale3"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:translationX="30dp"
                android:translationY="-660dp"
                app:srcCompat="@drawable/rectangle_income" />


            <ImageView
                android:id="@+id/availabale4"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:translationX="230dp"
                android:translationY="-780dp"
                app:srcCompat="@drawable/rectangle_income" />


            <TextView
                android:id="@+id/tvTitle1"
                android:layout_width="300dp"
                android:layout_height="25dp"
                android:fontFamily="@font/andada_pro"
                android:text="@string/tvAvailabaleBalance"
                android:textSize="20sp"
                android:translationX="50dp"
                android:translationY="-1230dp"/>


            <TextView
                android:id="@+id/tvAmount1"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:fontFamily="@font/bodoni_moda"
                android:text="@string/availableBalance"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationY="-1210dp" />

            <TextView
                android:id="@+id/tvDate1"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:fontFamily="@font/andada_pro"
                android:text="@string/tvSeeDetails"
                android:textColor="@color/green2"
                android:textSize="16sp"
                android:translationX="270dp"
                android:translationY="-1180dp" />


            <TextView
                android:id="@+id/tvMonthlySalary"
                android:layout_width="300dp"
                android:layout_height="25dp"
                android:fontFamily="@font/andada_pro"
                android:text="@string/tvMonthlySalary"
                android:textSize="20sp"
                android:translationX="50dp"
                android:translationY="-1130dp" />


            <TextView
                android:id="@+id/monthlySalary"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:fontFamily="@font/bodoni_moda"
                android:text="@string/monthlySalary"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationY="-1110dp" />


            <ImageView
                android:id="@+id/btnedit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:translationX="315dp"
                android:translationY="-1120dp"
                app:srcCompat="@drawable/edit4" />


            <TextView
                android:id="@+id/tvIncome"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:fontFamily="@font/andada_pro"
                android:text="@string/tvIncome"
                android:textAlignment="center"
                android:textSize="20sp"
                android:translationX="30dp"
                android:translationY="-1060dp" />


            <TextView
                android:id="@+id/tvExpense"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:fontFamily="@font/andada_pro"
                android:text="@string/tvExpense"
                android:textAlignment="center"
                android:textSize="20sp"
                android:translationX="230dp"
                android:translationY="-1080dp" />


            <TextView
                android:id="@+id/income"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:fontFamily="@font/bodoni_moda"
                android:text="@string/income"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="30dp"
                android:translationY="-1070dp" />


            <TextView
                android:id="@+id/expense"
                android:layout_width="150dp"
                android:layout_height="25dp"
                android:fontFamily="@font/bodoni_moda"
                android:text="@string/expense"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="230dp"
                android:translationY="-1090dp" />


            <ImageView
                android:id="@+id/btnPlus"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:translationX="150dp"
                android:translationY="-1020dp"
                app:srcCompat="@drawable/plus" />
        </LinearLayout>
    </FrameLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/green2"/>
</androidx.drawerlayout.widget.DrawerLayout>