<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fintrack11"
    tools:context=".monthlySalaryForm">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="921dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/finetrackTV2"
            android:layout_width="251dp"
            android:layout_height="88dp"
            android:fontFamily="@font/agbalumo"
            android:text="@string/finetrackTV"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:translationX="80dp"
            android:translationY="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.082" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="750dp"
            android:translationY="85dp"
            app:srcCompat="@drawable/rectangle3" />

        <ImageView
            android:id="@+id/btnmenu"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:translationX="10dp"
            android:translationY="-800dp"
            app:srcCompat="@drawable/backicon"/>

        <TextView
            android:id="@+id/tvAddMonthlySalary"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/bodoni_moda"
            android:text="@string/tvAddMonthlySalary"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="28sp"
            android:translationY="-650dp" />

        <EditText
            android:id="@+id/addTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/addMonthlySalary"
            android:inputType="text"
            android:textAlignment="center"
            android:translationY="-600dp" />

        <Button
            android:id="@+id/btnSubmitMonthlySalary"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/green2"
            android:text="@string/btnSubmitMonthlySalary"
            android:textAlignment="center"
            android:translationX="80dp"
            android:translationY="-250dp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>